<resources>

    <string name="app_name">SOAPS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SOAPS</string>
    <string name="add_form">Create a new form.</string>
    <string name="title_activity_view_form">View Form</string><string name="title_activity_new_form">New Form</string>
    <string name="search_patients">Search Patients</string>
    <string name="title_activity_view_patient">Patient</string>
    <string name="entry_count_label">Entry Count</string>
    <string name="save_form">Save Form</string>
    <string name="new_form_patient_name">New Patient Name</string>
    <string name="new_form_subjective">Subjective</string>
    <string name="new_form_objective">Objective</string>
    <string name="new_form_a">A</string>
    <string name="new_form_p">P</string>
    <string name="new_form_s">S</string>
    <string name="view_form_subjective">Subjective</string>
    <string name="view_form_objective">Objective</string>
    <string name="view_form_a">A</string>
    <string name="view_form_p">P</string>
    <string name="view_form_edit">Edit Form</string>
    <string name="view_form_home">Back Home</string>
    <string name="title_activity_edit_form">Edit Form</string>

</resources>