<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/new_form_patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/new_form_patient_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/new_form_subjective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_form_patient_name"
        android:ems="10"
        android:hint="@string/new_form_subjective"
        android:inputType="textMultiLine"
        android:singleLine="false" />

    <EditText
        android:id="@+id/new_form_objective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_form_subjective"
        android:ems="10"
        android:hint="@string/new_form_objective"
        android:inputType="textMultiLine"
        android:singleLine="false" />
    

    <EditText
        android:id="@+id/new_form_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_form_objective"
        android:ems="10"
        android:hint="@string/new_form_a"
        android:inputType="textMultiLine"
        android:singleLine="false" />

    <EditText
        android:id="@+id/new_form_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_form_a"
        android:ems="10"
        android:hint="@string/new_form_p"
        android:inputType="textMultiLine"
        android:singleLine="false" />

    <EditText
        android:id="@+id/new_form_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_form_p"
        android:ems="10"
        android:hint="@string/new_form_s"
        android:inputType="textMultiLine"
        android:singleLine="false" />

    <ImageButton
        android:id="@+id/new_form_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/save_form"
        android:onClick="saveForm"
        android:src="@drawable/ic_menu_save" />

</RelativeLayout>
