<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_form_top"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/new_form_entry_patient_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/new_form_patient_name"
                    android:inputType="textPersonName" />

                <Spinner
                    android:id="@+id/new_form_spinner_patient_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/new_form_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/save_form"
                android:onClick="saveForm"
                android:src="@drawable/ic_menu_save" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/new_form_subjective"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_form_subjective"
                android:inputType="textMultiLine"
                android:singleLine="false" />

            <EditText
                android:id="@+id/new_form_objective"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_form_objective"
                android:inputType="textMultiLine"
                android:singleLine="false" />

            <EditText
                android:id="@+id/new_form_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_form_a"
                android:inputType="textMultiLine"
                android:singleLine="false" />

            <EditText
                android:id="@+id/new_form_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_form_p"
                android:inputType="textMultiLine"
                android:singleLine="false" />

            <EditText
                android:id="@+id/new_form_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_form_s"
                android:inputType="textMultiLine"
                android:singleLine="false" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>