<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_form_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/view_form_name_and_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/view_form_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/view_form_edit"
                    android:onClick="gotoEdit"
                    android:src="@drawable/ic_menu_edit" />

                <ImageButton
                    android:id="@+id/view_form_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/view_form_home"
                    android:onClick="gotoHome"
                    android:src="@drawable/ic_input_add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_form_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/view_form_patient_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" >
                </TextView>

                <TextView
                    android:id="@+id/view_form_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/view_form_subjective_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/view_form_subjective" />

        <TextView
            android:id="@+id/view_form_subjective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/view_form_objective_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/view_form_objective" />

        <TextView
            android:id="@+id/view_form_objective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/view_form_a_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/view_form_a" />

        <TextView
            android:id="@+id/view_form_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/view_form_p_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/view_form_p" />

        <TextView
            android:id="@+id/view_form_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/view_form_s_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/new_form_s" />

        <TextView
            android:id="@+id/view_form_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout>

</ScrollView>